# relay-kern

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  aspiration.md  file-ratings.json  justfile
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
.kern/: kern.toml
.proj/: improve.json
.relay/: kern.toml
benches/: bench.rs  retrieval_trace_bench.rs
benches/retrieval_traces/: synthetic.json
docker/: Dockerfile  docker-compose.yml  hunt.sh
docs/: ARCHITECTURE.md  ETHICS.md  FEDERATION-SECURITY.md  OVERVIEW.md  SECURITY.md  USE.md  cleanup-audit.md  cleanup-prompt.md  relay-orchestrator-tui.md  relay-search-tui.md  things.txt
docs/book/: book.toml  flows.toml
docs/ideas/: async-turn-queue.md  auto-docs-design.md  auto-docs.md  board-mcp-search.md  board-subagent-provider.md  board-vision.md  composer-view-split.md  composer-view-split.progress.md  history-board-audit.md  history-rust-port.md  intro-as-boot-sequence.md  mesh-reasoner.md  ping-pong-skill-design-addendum.md  ping-pong-skill-design.md  ping-pong-skill.md  relay-ask-loop-design.md  relay-ask-loop.md  sandbox.md  trnsprt-unified-rpc.md  turn-protocol.md
docs/kern/: bayesian-belief.md  bench-retrieval.md  board-unblock-plan.md  crdts-federation.md  diskann-disk-index.md  fl-vs-knids-federation.md  pagerank-authority.md  safety-architecture.md  stigmergy-self-improving.md  wikipedia-edit-convergence.md
docs/llm/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  3.md  30.md  31.md  32.md  33.md  34.md  35.md  36.md  37.md  38.md  39.md  4.md  40.md  41.md  5.md  6.md  7.md  8.md  (+3 more)
docs/repl/: agent-harness.md  agent-queue-and-trace.md  architecture.md  auth.md  context-architecture.md  journal.md  plugin-api-design.md  plugin-model.md  plugin-surfaces.md  plugins.md  recipes.md  status-bar.md  ui-slots.md
hooks/: README.md  hooks.json  kern-recall-prompt.mjs
hooks/__tests__/: kern-capture.test.mjs  kern-recall-prompt.test.mjs  kern-recall.test.mjs
shared/: Cargo.toml
shared/config-io/src/: lib.rs
shared/journal/: Cargo.toml
shared/journal/src/: day_journal.rs  entry.rs  events.rs  history.rs  lib.rs  state.rs  tracing_layer.rs
shared/log/src/: lib.rs  tests.rs
shared/protocol/: Cargo.toml
shared/protocol/src/: agent.rs
shared/search/: Cargo.toml
shared/search/src/: lib.rs
shared/test-utils/src/: lib.rs  mcp_pipe.rs
shared/trnsprt/: Cargo.toml  README.md
shared/trnsprt/macros/src/: lib.rs
shared/trnsprt/src/: client.rs  error.rs  http.rs  inproc.rs  lib.rs  registry.rs  server.rs  transport.rs  types.rs
shared/trnsprt/src/kern_rpc/: client_local.rs  dto.rs  mock.rs  mod.rs  svc.rs
shared/trnsprt/src/search/: dto.rs  mock.rs  mod.rs  svc.rs
shared/trnsprt/src/typed/: adapter.rs  channel.rs  codec.rs  error.rs  local.rs  mod.rs
shared/trnsprt/tests/: integration.rs  kern_rpc.rs  search_rpc.rs
shared/tui/: Cargo.toml
shared/tui/src/: lib.rs
shared/tui/src/highlight/: lang.rs  mod.rs  query.rs  roles.rs
shared/tui/src/highlight/queries/: javascript.scm  markdown.scm  python.scm  rust.scm  toml.scm  typescript.scm
shared/tui/src/input/: key.rs  mod.rs
shared/tui/src/list_nav/: mod.rs  tests.rs
shared/tui/src/render/: cell.rs  default_theme.toml  diff.rs  emit.rs  frame.rs  grapheme.rs  mod.rs  pass.rs  region.rs  snapshot.rs  surface.rs  sync.rs  tests.rs  theme.rs  theme_config.rs  ws_surface.rs
shared/tui/src/textarea/: binding.rs  buffer.rs  edit_area.rs  form.rs  history.rs  list.rs  mod.rs  tests.rs  words.rs  wrap.rs
shared/watcher/: Cargo.toml
shared/watcher/src/: event.rs  ignore_rules.rs  lib.rs  pipeline.rs  watcher.rs
shared/watcher/tests/: watcher_tests.rs
src/: base.rs  commands.rs  crdt.rs  lib.rs  llm.rs  main.rs  mcp.rs  memory_service.rs  metrics.rs  profile.rs  quant.rs  repl.rs  retrieval.rs  store.rs  tick.rs  types.rs  viewer.rs  wire.rs
src/base/: accept.rs  cold.rs  constants.rs  diskann.rs  graph.rs  heat.rs  hnsw.rs  lexical.rs  locks.rs  math.rs  merge.rs  persist.rs  reason.rs  search.rs  store.rs  time.rs  types.rs  util.rs  vector_backend.rs
src/bench_support/: backend.rs  build.rs  compare.rs  embed.rs  latency.rs  locomo_run.rs  memory.rs  mod.rs  ndcg.rs  replay.rs  sweep.rs  trace.rs
src/commands/: admin.rs  graph_ops.rs  ingest_cmd.rs  mcp_cmd.rs  profile_cmd.rs  query.rs
src/config/: capture.rs  embed.rs  gnn.rs  gossip.rs  graph.rs  ingest.rs  journal.rs  mod.rs  mux.rs  reason.rs  retrieval.rs  serve.rs  tick.rs  watcher.rs
src/config-io/: Cargo.toml
src/gnn/: activation.rs  backward.rs  dropout.rs  gat.rs  gcn.rs  graph.rs  layer.rs  loss.rs  message.rs  mod.rs  model.rs  norm.rs  optim.rs  persist.rs  pool.rs  propagate.rs  sage.rs  tensor.rs  train.rs
src/gossip/: discovery.rs  handler.rs  ledger.rs  merge.rs  mod.rs  node.rs  seen.rs  sybil.rs  types.rs
src/ingest/: capture_spool.rs  compactor.rs  config.rs  day_digest.rs  dedup.rs  distill.rs  embed.rs  file_watcher.rs  mod.rs  outcome.rs  place.rs  session_mirror.rs  split.rs  synthesis.rs  worker.rs
src/journal/: Cargo.toml
src/journal/.kern/journal/: today.jsonl
src/journal/src/: day_journal.rs  entry.rs  events.rs  history.rs  lib.rs  state.rs  tracing_layer.rs
src/log/: Cargo.toml  README.md
src/mcp/: prompt.rs  resources.rs  sse.rs  tools.rs  tools_admin.rs  tools_mutate.rs  tools_mux.rs  tools_query.rs
src/mux/: delegate.rs  kern_client.rs  mcp.rs  mod.rs  pty.rs  questions.rs  registry.rs  research.rs  tui.rs
src/retrieval/: answer.rs  cache.rs  digest.rs  diversify.rs  expand.rs  fuse.rs  heap.rs  hyde.rs  merge.rs  pagerank.rs  rerank.rs  score.rs  seed.rs
src/rpc/: kern_rpc_server.rs  mod.rs
src/test-utils/: Cargo.toml
src/tick/: cluster.rs  gnn_propagate.rs  pulse.rs  (+3 more)
src/trnsprt/macros/: Cargo.toml
src/trnsprt/macros/src/: lib.rs
test_utils/: Cargo.toml
tests/: multi_store.rs
viewer/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
(+79 files in other folders)
