[workspace]
resolver = "2"
members = [
    "test_utils",
    "shared/config-io",
    "shared/journal",
    "shared/log",
    "shared/protocol",
    "shared/search",
    "shared/trnsprt",
    "shared/trnsprt/macros",
    "shared/tui",
    "shared/watcher",
    "shared/test-utils",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
publish = false
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
bincode = { version = "2", features = ["serde"] }
sha2 = "0.11"
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
axum = "0.8.9"
rayon = "1.12"
trnsprt-macros = { path = "shared/trnsprt/macros" }

[workspace.lints.rust]
warnings = "deny"
dead_code = "warn"
unused_imports = "warn"

[package]
name = "kern"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
hunt = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "kern"
path = "src/main.rs"

[[bin]]
name = "retrieval_bench"
path = "src/bin/retrieval_bench.rs"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[[bench]]
name = "retrieval_trace_bench"
path = "benches/retrieval_trace_bench.rs"
harness = false

[dependencies]
config-io = { path = "shared/config-io" }
clap = { version = "4", features = ["derive"] }
serde.workspace = true
rand.workspace = true
bincode.workspace = true
thiserror.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
sha2.workspace = true
axum.workspace = true
async-stream = "0.3"
futures-core = "0.3"
journal = { path = "shared/journal" }
tracing-subscriber.workspace = true
tracing.workspace = true
protocol = { path = "shared/protocol" }
trnsprt = { path = "shared/trnsprt" }
watcher = { path = "shared/watcher" }
async-trait = "0.1"

[dev-dependencies]
proptest = "1"
test-utils = { path = "test_utils" }
criterion = "0.5"
tempfile = "3"

[lints]
workspace = true
