[workspace]
resolver = "2"
members = [
    "config-io",
    "journal",
    "log",
    "protocol",
    "search",
    "trnsprt",
    "trnsprt/macros",
    "tui",
    "watcher",
    "test-utils",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
publish = false
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
crossterm = { version = "0.29", features = ["bracketed-paste"] }
bincode = { version = "2", features = ["serde"] }
axum = "0.8.9"
unicode-segmentation = "1.13"
unicode-width = "0.2"
toml = "1.1"
trnsprt-macros = { path = "trnsprt/macros" }

[workspace.lints.rust]
warnings = "deny"
dead_code = "warn"
unused_imports = "warn"
