[package]
name = "journal"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
rusqlite = { version = "0.39", features = ["bundled"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
