[package]
name = "protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
trnsprt = { path = "../trnsprt" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
