[package]
name = "trnsprt"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Transport boundary: MCP client (legacy) + typed-RPC stack (Adapter/Codec/Channel)."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
logsink = { path = "../log" }
# Typed-RPC stack (Phase 1, additive):
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3"
axum = { workspace = true }
async-stream = "0.3"
bincode = { workspace = true }
tracing = { workspace = true }
trnsprt-macros = { workspace = true }

[dev-dependencies]
test-utils = { path = "../test-utils" }
