[package]
name = "tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crossterm.workspace = true
serde.workspace = true
toml.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

# Syntax highlighting (tree-sitter). Grammar crates pin
# `tree-sitter-language = 0.1` and accept tree-sitter 0.25.x ABI.
tree-sitter = "0.25"
streaming-iterator = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-toml-ng = "0.7"
tree-sitter-md = "0.5"

[lints]
workspace = true
