[package]
name = "watcher"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Filesystem watcher (notify-rs) with debounce + ignore-rules + ingest pipeline. Slice E of relay-search-tui."

[lints]
workspace = true

[dependencies]
notify = "8"
ignore = "0.4"
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
async-trait = "0.1"
